# nvidia-supplychain-analysis-MCP

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/: mcp.json.example  mcp_alternative.json
nvidia_mcp/: __init__.py  server.py  tools.py
nvidia_mcp/internal/: __init__.py  earnings.py  portfolio_optimizer.py  supply_chain.py  technical.py  trading_instructions.py
scripts/: earnings_calendar.py  fetch_supply_chain_data.py
